--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-        <h1>Andrea Martínez</h1>
-    </header>
-    <nav></nav>
-    <main></main>
+      <div>
+        <header>
+          <img class="images/andrea.jpg" src="">
+          <h1 class="main-title">Andrea Martínez</h1>
+        </header>  
+      </div>
     <footer></footer>
-    <script src=""></script>
-</body>
+  </body>
 </html>
