--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
       <div>
         <header>
-          <img class="image" src="images/andrea.jpg"> alt="The creador of the page"
+          <img class="image" src="images/andrea.jpg" alt="The creador of the page" width="25"> 
           <h1 class="main-title">Andrea Martínez</h1>
         </header>  
       </div>
