--- a/index.html
+++ b/index.html
@@ -3,17 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Andrea Martínez</title>
-    <meta name="description" content="This is a test" />
+    <meta name="description" content="Assignment portal for Andrea Martínez in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
     <link rel="stylesheet" href="css/style.css" />
+    <title>Andrea Martínez</title>
   </head>
   <body>
-      <div>
+      <div class="content">
         <header>
           <img class="image" src="images/andrea.jpg" alt="The creador of the page" width="100"> 
           <h1 class="main-title">Andrea Martínez</h1>
-        </header>  
+        </header>
+        <main>
+          <h1 class="main-title-2">WDD 230: Assignment Portal</h1>
+          <ul>
+            <li>Lesson 02: <a href="">Title</a></li>
+            <li>Lesson 03: <a href="">Title</a></li>
+            <li>Lesson 04: <a href="">Title</a></li>
+            <li>Lesson 05: <a href="">Title</a></li>
+            <li>Lesson 06: <a href="">Title</a></li>
+            <li>Lesson 07: <a href="">Title</a></li>
+            <li>Lesson 08: <a href="">Title</a></li>
+            <li>Lesson 09: <a href="">Title</a></li>
+            <li>Lesson 10: <a href="">Title</a></li>
+            <li>Lesson 11: <a href="">Title</a></li>
+          </ul>
+        </main>
       </div>
-    <footer></footer>
+    <footer>
+      &copy; | Andrea Martínez | Siguatepeque, Honduras
+    </footer>
   </body>
 </html>
