--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
       <div class="content">
         <header>
-          <img class="image" src="images/andrea.jpg" alt="The creador of the page" width="100"> 
-          <h1 class="main-title">Andrea Martínez</h1>
+          <img class="image" src="images/andrea.jpg" alt="The creador of the page" width="125"> 
+          <h1 class="main-headline">Andrea Martínez</h1>
         </header>
         <main>
-          <h1 class="main-title-2">WDD 230: Assignment Portal</h1>
+          <h1 class="main-headline-2">WDD 230: Assignment Portal</h1>
           <ul>
             <li>Lesson 02: <a href="">Title</a></li>
             <li>Lesson 03: <a href="">Title</a></li>
