--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       </div>
     <footer>
       &copy; | Andrea Martínez | Siguatepeque, Honduras
+      <b>document.lastModified : </b>
+      <script>document.write( document.lastModified );</script>
     </footer>
   </body>
 </html>
