--- a/index.html
+++ b/index.html
@@ -31,12 +31,7 @@
       </div>
     <footer>
       &copy; | Andrea Martínez | Siguatepeque, Honduras
-      <script>
-        function myFunction() {
-          var x = document.lastModified;
-          document.getElementById("demo").innerHTML = x;
-        }
-        </script>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
